<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="16dp"
        app:strokeColor="@color/line_bg"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/chips_balance_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/basier_circle_semibold"
                android:text="@string/chips_balance"
                android:textAllCaps="true"
                android:textColor="@color/dsc_grey"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/coin_bar_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/basier_circle_bold"
                android:gravity="center"
                android:text="@string/coin_txt2"
                android:textSize="@dimen/text_size_bold"
                app:drawableLeftCompat="@drawable/coin_ic"
                app:layout_constraintStart_toStartOf="@id/chips_balance_txt"
                app:layout_constraintTop_toBottomOf="@id/chips_balance_txt" />

            <TextView
                android:id="@+id/waiting_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/basier_circle_medium"
                android:gravity="center"
                android:text="@string/eight_hundred"
                android:textColor="@color/grey_100"
                android:textSize="@dimen/text_size_regular"
                app:drawableLeftCompat="@drawable/ic_waiting"
                app:layout_constraintBottom_toBottomOf="@id/coin_bar_txt"
                app:layout_constraintStart_toEndOf="@id/coin_bar_txt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>