<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="@dimen/text_size_regular"
            android:textColor="@color/black_500"
            app:layout_constraintTop_toBottomOf="@id/home_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp"
            android:textAllCaps="true"
            android:fontFamily="@font/basier_circle_medium"/>

        <ImageView
            android:id="@+id/pay_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            android:textSize="@dimen/text_size_regular"
            android:textColor="@color/dsc_grey"
            app:layout_constraintTop_toBottomOf="@id/pay_icon"
            app:layout_constraintStart_toStartOf="@id/pay_icon"
            android:textAllCaps="true"
            android:fontFamily="@font/basier_circle_medium"/>

        <ImageView
            android:id="@+id/rewards_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_rewards"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewards"
            android:textSize="@dimen/text_size_regular"
            android:textColor="@color/dsc_grey"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="46dp"
            app:layout_constraintStart_toStartOf="@id/rewards_icon"
            app:layout_constraintTop_toBottomOf="@id/pay_icon"
            android:textAllCaps="true"
            android:fontFamily="@font/basier_circle_medium"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>