<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:elevation="10dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/credit_score_color_bg" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/credit_health_meter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/credit_health_meter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/powered_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/credit_health_meter"
                app:layout_constraintStart_toEndOf="@id/credit_health_meter"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/text_size_regular"
                android:text="@string/powered_by"
                android:textAllCaps="true"
                android:textColor="@color/grey_200"
                android:fontFamily="@font/basier_circle_medium" />

            <ImageView
                android:id="@+id/ic_experian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_experian"
                app:layout_constraintStart_toEndOf="@id/credit_health_meter"
                app:layout_constraintTop_toBottomOf="@id/powered_by" />

            <ImageView
                android:id="@+id/right_icon"
                android:layout_width="9dp"
                android:layout_height="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_right"/>

            <TextView
                android:id="@+id/deno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/right_icon"
                app:layout_constraintTop_toTopOf="@id/powered_by"
                android:layout_marginEnd="10dp"
                android:text="@string/deno_string"
                android:textSize="@dimen/text_size_bold"
                android:textColor="@color/grey_200"
                android:fontFamily="@font/basier_circle_medium"/>

            <TextView
                android:id="@+id/num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/deno"
                app:layout_constraintTop_toTopOf="@id/powered_by"
                android:layout_marginEnd="2dp"
                android:text="@string/num"
                android:textSize="@dimen/txt_super_bold"
                android:textColor="@color/black_500"
                android:fontFamily="@font/basier_circle_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/num"
                app:layout_constraintEnd_toEndOf="@id/deno"
                android:text="@string/good"
                android:textColor="@color/green_200"
                android:fontFamily="@font/basier_circle_regular"
                android:textSize="@dimen/text_size_regular"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>