<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/chip_card"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/coin_card_bg" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:background="@drawable/instant_cash_card_bg">

            <TextView
                android:id="@+id/instant_cash_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:text="@string/get_cash"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/basier_circle_regular"
                android:textSize="@dimen/text_size_regular_600"/>

            <TextView
                android:id="@+id/instant_cash_amnt"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/instant_cash_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:text="@string/instant_cash_amnt"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/basier_circle_bold"
                android:textSize="@dimen/text_size_bold_500"
                app:drawableRightCompat="@drawable/instant_right_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:src="@drawable/instant_cash_icon"/>

            <TextView
                android:id="@+id/coin_bar_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/basier_circle_semibold"
                android:gravity="center"
                android:text="@string/instant_cash_coin"
                android:textColor="@color/credit_score_bg"
                android:textSize="@dimen/text_size_regular"
                app:drawableLeftCompat="@drawable/coin_ic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="10dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>